manifests/istio/ab-testing-destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: service2
spec:
  host: service2
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpHeaderName: version
