manifests/istio/shadowing-destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: service2
spec:
  host: service2
  subsets:
  - name: v1        
    labels:
      version: v1   
  - name: v2
    labels:
      version: v2
