manifests/istio/shadowing-virtual-serivce.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service2
spec:
  hosts:
    - service2
  http:
  - route:
    - destination:
        host: service2
        subset: v1       
    mirror:
      host: service2     
      subset: v2
