manifests/istio/traffic-splitting-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service2
spec:
  hosts:
    - service2
  http:
  - route:
    - destination:
        host: service2
        subset: v1
      weight: 90       
    - destination:
        host: service2
        subset: v2
      weight: 10
